[package]
name = "aptos-compression"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "A simple compression interface used by Aptos"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
once_cell = "1.10.0"
snap = "1"
thiserror = "1.0.31"

aptos-logger = { path = "../aptos-logger" }
aptos-metrics-core = { path = "../aptos-metrics-core" }

[dev-dependencies]
