[package]
name = "storage-interface"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos storage interface"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.57"
bcs = "0.1.3"
crossbeam-channel = { version = "0.5.4", features = ["crossbeam-utils", "std"] }
parking_lot = "0.12.0"
serde = { version = "1.0.137", default-features = false }
thiserror = "1.0.31"
rayon = "1.5.2"

aptos-crypto = { path = "../../crates/aptos-crypto" }
aptos-metrics-core = { path = "../../crates/aptos-metrics-core" }
aptos-secure-net = { path = "../../secure/net" }
aptos-state-view = { path = "../state-view" }
aptos-types = { path = "../../types" }

move-deps = { path = "../../aptos-move/move-deps", features = ["address32"] }
scratchpad = { path = "../scratchpad" }

[features]
default = []
fuzzing = ["aptos-types/fuzzing"]
