[package]
name = "aptos-indexer-api"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos REST API"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.57"
bcs = "0.1.3"
bytes = "1.1.0"
fail = "0.5.0"
futures = "0.3.12"
hex = "0.4.3"
hyper = "0.14.18"
once_cell = "1.10.0"
percent-encoding = "2.1.0"
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_json = "1.0.81"
tokio = { version = "1.8.1", features = ["full"] }
warp = { version = "0.3.2", features = ["default", "tls"] }

aptos-api = {path = "../../../api"}
aptos-api-types = {path = "../../../api/types"}